<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/fun_with_flags_logo"
        android:padding="@dimen/standard_padding"
        android:contentDescription="@string/img_activity_start"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">
            <Button
                android:id="@+id/flags_button"
                android:layout_width="@dimen/buttons_width"
                android:layout_height="@dimen/buttons_height"
                android:text="@string/button_to_flag"
                android:onClick="goToFlag"
                android:layout_margin="@dimen/buttons_margin"
                style="@style/StartButtonStyle"/>
            <Button
                android:id="@+id/quiz_button"
                android:layout_width="@dimen/buttons_width"
                android:layout_height="@dimen/buttons_height"
                android:text="@string/button_to_quiz"
                android:onClick="goToQuiz"
                android:layout_margin="@dimen/buttons_margin"
                style="@style/StartButtonStyle"/>
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>